--- a/calculator/Makefile
+++ b/calculator/Makefile
@@ -1,8 +1,22 @@
-CC = g++
-CFLAGS = -Wall -g
+.PHONY: all debug release clean
 
-calculator: calculator.cpp
-    $(CC) $(CFLAGS) calculator.cpp -o calculator
+RELEASE_FLAGS = -O2 -Wall -DNDEBUG
+DEBUG_FLAGS   = -g -O0 -Wall
+RELEASE_EXEC = calculator
+DEBUG_EXEC    = calculator-dbg
+SOURCE        = main.cpp
+
+all: debug release
+
+debug: $(DEBUG_EXEC)
+
+$(DEBUG_EXEC): $(SOURCE)
+  g++ $(DEBUG_FLAGS) $(SOURCE) -o $(DEBUG_EXEC) 
+
+release: $(RELEASE_EXEC)
+
+$(RELEASE_EXEC): $(SOURCE)
+  g++ $(RELEASE_FLAGS) $(SOURCE) -o $(RELEASE_EXEC)
 
 clean:
-    rm -f calculator *.o
+  rm -f $(RELEASE_EXEC) $(DEBUG_EXEC)
